# toy-compiler

./: .gitignore  Cargo.toml  Makefile  README.md
.builds/: archlinux.yml
examples/: argument.toy  main.c
toy-backend/: Cargo.toml
toy-backend/src/: lib.rs
toy-lexer/: Cargo.toml
toy-lexer/src/: lib.rs
toy-parser/: Cargo.toml
toy-parser/src/: ast.rs  environment_builder.rs  lib.rs  parser.lalrpop  table.rs  typecheck.rs  visitor.rs
toy-parser/tests/: parser.rs
toy-parser2/: Cargo.toml  build.rs
toy-parser2/src/: lib.rs
toy-parser2/src/ast/: mod.rs
toy-parser2/src/grammar/: grammar.lalrpop  mod.rs
toy-typecheck/: Cargo.toml
toy-typecheck/src/: lib.rs
toyc/: Cargo.toml
toyc/src/: backend.rs  lib.rs  main.rs
toyc2/: Cargo.toml
toyc2/src/: main.rs
