[package]
name = "toy-backend"
version = "0.1.0"
authors = ["tarberd <bernardo.mferrari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-parser2 = { path = "../toy-parser2" }
toy-lexer = { path = "../toy-lexer" }
llvm-sys = "110"
